# websearch-bench

./: .env.example  .gitignore  README.md  pyproject.toml
samples/agent_framework/: bing_redis.py
src/websearch_bench/: __init__.py  __main__.py  appinsights.py  auth.py  bing_usage.py  compare.py  cost_lookup.py  pricing.py  report.py  shared.py
src/websearch_bench/backends/: __init__.py  agentfx_bing.py  agentfx_bing_cached.py  agentfx_ws.py  agentfx_ws_cached.py  foundry_bing.py  foundry_bing_custom.py  foundry_bing_grounding.py  foundry_bing_grounding_custom.py  foundry_ws_bing.py  foundry_ws_bing_cheap.py  foundry_ws_bing_fast.py  foundry_ws_bingcustom.py  openai_web_search.py  openai_ws.py
