[project]
name = "websearch-bench"
version = "0.3.0"
description = "Side-by-side benchmark of web-search grounding across Azure AI Foundry SDK, Microsoft Agent Framework, and the OpenAI Responses API"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.3",
    "aiohttp>=3.9.0",
    "azure-ai-projects>=2.1.0",
    "agent-framework-core>=1.0.1",
    "agent-framework-foundry>=1.0.1",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "redis>=5.0.0",
    "azure-monitor-opentelemetry>=1.6.0",
    "azure-monitor-query>=1.3.0,<2.0.0",
]

[project.scripts]
websearch-bench = "websearch_bench.compare:cli"

[tool.uv]
prerelease = "allow"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
